Fix button component contrast for accessibility

--- a/client/src/components/common/Button/Button.module.scss
+++ b/client/src/components/common/Button/Button.module.scss
@@ -31,7 +31,7 @@
 
 .secondary {
   background: var(--clr-primary);
-  color: var(--clr-fg);
+  color: var(--clr-fg-dark);
 
   &:hover,
   &:focus {
